# ErrorGnoMark

./: README.md  pyproject.toml  requirements.txt
errorgnomark/: Baihua_calibration_2025-04-21 12_26_19.csv  configuration.py  errorgnomarker.py  execute.py  node_indices & selected_connections.txt  q1soutput.txt
errorgnomark/backends/: base_backend.py  dummy_backend.py
errorgnomark/circuits/: circuit.py
errorgnomark/cirpulse_generator/: circuit_generator.py  elements.py  qubit_selector.py
errorgnomark/data_analysis/: layer_cirgate.py
errorgnomark/data_egm/: Baihua_egm_data_20250404_141331.json  Baihua_egm_data_20250404_141647.json  Baihua_egm_data_20250404_142408.json  Baihua_egm_data_20250404_142939.json  Baihua_egm_data_20250404_143731.json  Baihua_egm_data_20250404_144153.json  Baihua_egm_data_20250404_144715.json  Baihua_egm_data_20250404_145806.json  Baihua_egm_data_20250404_150416.json  Baihua_egm_data_20250404_150816.json  Baihua_egm_data_20250404_150947.json  Baihua_egm_data_20250404_151629.json  Baihua_egm_data_20250404_151809.json  Baihua_egm_data_20250404_152032.json  Baihua_egm_data_20250404_152459.json  Baihua_egm_data_20250404_152622.json  Baihua_egm_data_20250404_152656.json  Baihua_egm_data_20250404_153733.json  Baihua_egm_data_20250404_153859.json  Baihua_egm_data_20250404_154310.json  Baihua_egm_data_20250404_154857.json  Baihua_egm_data_20250404_155302.json  (+73 more)
example/: Baihua_calibration_2025-05-20 18_14_29.csv  Baihua_calibration_2025-05-26 07_46_48.csv  QC-lmc.py
examples/: run_single_experiment.py  run_single_xeb_experiment.py
(+26 files in other folders)
